<resources>
    <string name="app_name">AppMaps</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ferramentas">Configurações</string>

    <!-- Strings related to Settings -->

    <!-- Example Sobre o app settings -->
    <string name="pref_header_general">Sobre</string>

    <string name="sumario_sobre">Sobre o aplicativo</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Nome</string>
    <string name="pref_default_display_name">Escreva seu nome</string>

    <string name="pref_title_add_friends_to_messages">Adicionar amigos as menssgens</string>
    <string-array name="pref_example_list_titles">
        <item>Sempre</item>
        <item>Quando Possivel</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutos</item>
        <item>30 minutos</item>
        <item>1 horas</item>
        <item>3 horas</item>
        <item>6 horas</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">Configurações do Sistema</string>

    <!-- Example Notificação -->
    <string name="pref_header_notifications">Notificações</string>
    <string name="sumario_notifica"> Escolha como quer ser notificado</string>
    <string name="pref_title_new_message_notifications">Mostrar notificações</string>

    <string name="pref_title_ringtone">Toques</string>
    <string name="sumario_toque">Escolha o Som</string>
    <string name="pref_ringtone_silent">Silencioso</string>

    <string name="pref_title_vibrate">Vibrar</string>
    <string name="sumario_vibrar">Vibra quando o alarme desperta</string>

    <!-- Grupos de configurações-->

    <string name="group_config">Configurações</string>
    <string name="group_sobre">Sobre o aplicativo</string>
    <string name="descricao">Ex: Casa, Trabalho...</string>

</resources>

